# fit-rs

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20211113044353_add_routines_table.down.sql  20211113044353_add_routines_table.up.sql  20211113045153_add_exercises_table.up.sql  20211113063044_add_main_muscle_worked.down.sql  20211113063044_add_main_muscle_worked.up.sql
src/: main.rs
