[package]
name = "fit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.0"
async-graphql-tide = "2.0"
async-std = { version = "1.8.0", features = ["attributes"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
