[package]
name = "fit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.0", features = ["dataloader"] }
async-graphql-tide = "2.0"
async-std = "1.9.0"
async-trait = "0.1.42"
sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "postgres"] }
tide = "0.16.0"

[dev-dependencies]
serde_json = "1.0.61"
surf = "2.1.0"
